<resources>
    <string name="app_name">AgendaITZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_activities">Actividades</string>
    <string name="menu_places">Lugares</string>
    <string name="menu_guests">Invitados</string>
    <string name="menu_events">Eventos</string>
    <string name="menu_persons">Personas</string>
    <string name="menu_thematic">Tematicas</string>
    <string name="agregar_invitado">Agregar Invitado</string>
    <string name="lugar_procedencia">Lugar de Procedencia</string>
    <string name="sex_fem">Femenino</string>
    <string name="sex_masc">Masculino</string>
    <string name="nombre_invitado">Nombre de Invitado</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="genero">Genero</string>
    <string name="telefono">Telefono</string>
    <string name="e_mail">e-mail</string>
    <string name="codigo">Codigo</string>
    <string name="parentesco">Parentesco</string>
    <string name="lugar">Lugar</string>

    <string-array name="parentesco">
        <item>Papá</item>
        <item>Mamá</item>
        <item>Hijo</item>
        <item>Hija</item>
        <item>Hermano</item>
        <item>Hermana</item>
        <item>Tío</item>
        <item>Tía</item>
        <item>Primo</item>
        <item>Prima</item>
        <item>Hierno</item>
        <item>Nuera</item>
        <item>Cuñado</item>
        <item>Cuñada</item>
        <item>Sobrino</item>
        <item>Sobrina</item>
        <item>Nieto</item>
        <item>Nieta</item>
        <item>Amigo</item>
        <item>Conocido</item>
    </string-array>
</resources>
