<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
<item android:title="Secciones">
    <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_activities"
            android:title="@string/menu_activities" />

        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_menu_places"
            android:title="@string/menu_places" />

        <item
            android:id="@+id/nav_guests"
            android:icon="@drawable/ic_menu_guests"
            android:title="@string/menu_guests" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/menu_events"/>

        <item
            android:id="@+id/nav_persons"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_persons"/>

        <item
            android:id="@+id/nav_thematic"
            android:icon="@drawable/ic_menu_thematic"
            android:title="@string/menu_thematic"/>
    </group>
    </menu>
</item>
</menu>
